--- a/docs/1.1_sound.md
+++ b/docs/1.1_sound.md
@@ -113,7 +113,7 @@ YouTubeVideo("2CJJ6FrfuGU")
 
 A microphone is the opposite of a speaker and has a very sensitive diaphragm that subtly vibrates in the presence of soundwaves.  If we measure the deflection of the microphone away from neutral at a very fast and regular rate, we *digitize* a signal such as an audio signal. Graphically, it looks like this time vs amplitude plot (magnitude of microphone deflection):
 
-<img src="images/Signal_Sampling.png" width="300">
+<img src="img/Signal_Sampling.png" width="300">
 
 The microphone is wiggling in a continuous fashion and knows nothing about sampling rate. It is a so-called analog signal. To get that into a computer, we must convert it to numbers. The numbers you saw above for the Kiss song are the result of digitization.
 
