--- a/docs/1.2_hello.md
+++ b/docs/1.2_hello.md
@@ -220,11 +220,11 @@ I 11:27:00.606 LabApp] [jupyter_nbextensions_configurator] enabled 0.2.8
 
 That will start up a program that launches a tab in your browser as well:
 
-<img src="../notes/images/lab1.png" width="60%">
+<img src="../notes/img/lab1.png" width="60%">
 
 Clicking on the "Python 3" icon under the "Notebook" category creates a new notebook window for you:
 
-<img src="../notes/images/lab2.png" width="80%">
+<img src="../notes/img/lab2.png" width="80%">
 
 Type `500+1` into the first cell next to the `In [ ]`. You should see the output 501 generated in the `Out` section below it. Hit control-enter to execute that cell or the right-facing triangle in the toolbar to execute the cell.
 
