--- a/docs/1.3_sound.md
+++ b/docs/1.3_sound.md
@@ -254,7 +254,7 @@ plt.show()
 
 See if you can see the relationship between this code and the previous code. We have another import statement that pulls in some plotting code and we use that to produce a scatterplot by replacing the `play`/`wait` sequence with with the last two lines. Other than that the code is the same. Run that code and you should see a nice wiggly sinewave, which is the addition of two pure sine waves at different frequencies:
 
-<img src="images/twotone.png" width="100%">
+<img src="img/twotone.png" width="100%">
 
 ## Sound processing
 
