--- a/docs/2.3_computation.md
+++ b/docs/2.3_computation.md
@@ -355,7 +355,7 @@ Quantity2 = [6, 49, 0, 30, -19, 21, 12, 22, 21]
 
 来自数学的 Sigma 符号以直接的方式转换为索引循环。例如：
 
-<img src="images/formula-translation.png" width="490"> 
+<img src="img/formula-translation.png" width="490"> 
 
 我们从求和中选取元素并将它们插入模板中来获得索引循环。
 
