--- a/docs/2.4_python-patterns.md
+++ b/docs/2.4_python-patterns.md
@@ -68,7 +68,7 @@ last=['Li', 'Smith', 'Dixon']
 
 Let's start with a very simple but extremely common pattern called  accumulate. The pattern traverses a sequence of elements and accumulates a value. For example, to sum the numbers in a sequence, we use the accumulator operation with the `+` operator. As we traverse the sequence, we update a running sum that's initialized to 0:
 
-<img src="images/accumulator.png" width="290">
+<img src="img/accumulator.png" width="290">
 
 In Excel, this is like using `sum(...)` in a cell. In Python, the implementation of this pattern has an initialization step and a loop:
 
@@ -91,7 +91,7 @@ A **counter** is a special case of an accumulator that counts the number of elem
 
 We can update multiple running accumulated values, not just one. For example, let's say we wanted to count the number of even and odd values in a sequence. We need two accumulator values, both starting at zero, but the operation is the same:
 
-<img src="images/accumulator-even-odd.png" width="320">
+<img src="img/accumulator-even-odd.png" width="320">
 
 The `+1` indicates an "add one to accumulated value" operation applied at each step but only if the current value is even or odd. In Python code, we'd do something like the following:
 
@@ -112,7 +112,7 @@ print(even, odd)
 
 Perhaps the most common operation *maps* one sequence to another, applying an operator or function to each element. (It's like an accumulator that accumulates a list of stuff instead of a single value.) For example, using a spreadsheet to create a new column containing the unit price discounted by 5% starts like this in a spreadsheet:
 
-<img src="images/map-discount-op.png" width="390">
+<img src="img/map-discount-op.png" width="390">
 
 We can represent both lists at time 0 using list literals:
 
@@ -124,7 +124,7 @@ Discounted = [] # empty list
 
 In other words:
 
-<img src="images/price-time0.png" width="400">
+<img src="img/price-time0.png" width="400">
 
 The translation process in our heads from high-level operation to pseudocode to code is a game of *word association*". When your brain sees an operation that maps a column of data to another, think "map". When your brain hears "map" it should generate the appropriate pseudocode loop, filling in the pieces appropriately.  When your brain hears "for each blah blah", think "oh, for-each loop" and use the appropriate coding pattern:
 
@@ -187,13 +187,13 @@ print(namelens)
 
 Let's look at the code pattern to traverse two lists at once placing the result in a third list. For example, to compute the cost of a sales transaction, we multiply the quantity times the unit price. In a spreadsheet, that looks like this:
 
-<img src="images/map-formula.png" width="250">
+<img src="img/map-formula.png" width="250">
 
 Dragging that formula down the Cost column, applies the formula to the following rows, thus, filling the new column.
 
 Programmatically, what we're doing is multiplying the *ith* element from two different sequences and placing the result in the *ith* position of the output sequence:
 
-<img src="images/map-mult.png" width="490">
+<img src="img/map-mult.png" width="490">
 
 At time zero, we have the following data available:
 
@@ -321,11 +321,11 @@ print(Cost)
 
 The opposite of combining is splitting where we split a stream into two or more new streams. For example, I often have to split the full names in a list into their first and last names. In a spreadsheet, we make a blank column:
 
-<img src="images/split-names.png" width="250">
+<img src="img/split-names.png" width="250">
 
 and then split on the space character (In Excel, you use `Data` > `Text to Columns`) to get two new columns:
 
-<img src="images/split-names-after.png" width="160">
+<img src="img/split-names-after.png" width="160">
 
 We could "undo" this split using a *combine* operation with the string concatenation operator, which would combine first and last names together into a new stream containing full names again.
 
@@ -433,11 +433,11 @@ Length 3
 
 The most general operation used to extract data from a list or  sequence is called *filter*. For example, using Excel's filter mechanism, we can filter a Shipping column for those values less than $10:
 
-<img src="images/filter-shipping.png" width="170">
+<img src="img/filter-shipping.png" width="170">
 
 The filter operation is similar to the map operation in that a computation is applied to each element of the input stream. Map applies a function to each element of a sequence and creates a new sequence of the same size. Filter tests each element for a specific condition and, if true, adds that element to the new sequence.
 
-<img src="images/filter-apply.png" width="590">
+<img src="img/filter-apply.png" width="590">
 
 A filter operation is just a map that conditionally adds elements to the target list:
 
@@ -469,7 +469,7 @@ print(Shipping2)
 
 We can also filter on one column but keep the data within each row together. Here is an example, using Excel, that filters Oscar winners from the list of nominees (the condition is *winner equals 1*):
 
-<img src="images/filter-winners.png" width="590">
+<img src="img/filter-winners.png" width="590">
 
 
 ```python
@@ -584,7 +584,7 @@ The `break` statement breaks out of the immediately-enclosing loop, regardless o
 
 The search operation can even be used within a string (list of characters) to find the position of a character of interest. For example, to slice up a full name into first and last names, we can combine a search for the space character with two slice operations. Given full name `Xue Li`, a search for the space character returns the fourth position or index 3. To extract the first name, we slice from index 0 to index 3, exclusively on the right. To get the last name, we slice from index 4 to 6, exclusively on the right. 
 
-<img src="images/split-string.png" width="190">
+<img src="img/split-string.png" width="190">
 
 Here's what that looks like a python:
 
@@ -622,7 +622,7 @@ We sometimes need to repeat repeated instructions, which we call a *nested loop*
 
 Recall that, while we humans can look at the entire matrix at once, a computer examines each element one-by-one. Take a look at this 3x3 matrix:
 
-<img src="images/matrixA.png" width="100">
+<img src="img/matrixA.png" width="100">
 
 which we can represent in python using a list of list:
 
@@ -717,7 +717,7 @@ print(sum)
 
 In the images project for this class, we do lots of fun things to images. An image is nothing more than a two-dimensional matrix whose entries are pixel grayscale values from 0 to 255. A pixel value of 0 is black and 255 is white. For example, if we zoom in on an image, we see the individual elements (called pixels) of a two-dimensional matrix:
 
-<img src="images/obama-zoom.png" width="400">
+<img src="img/obama-zoom.png" width="400">
 
 The only difference between an image and a matrix is that we typically access the elements of an image using x and y coordinates, rather than row and column. The template for a nested loop that accesses each element of an image looks like this:
 
@@ -731,7 +731,7 @@ Because the *y* coordinate varies faster than the *x* coordinate, the inner loop
 
 As a more realistic example, let's add two matrices A and B together to form C. The key operation is to add A<sub>i,j</sub> to B<sub>i,j</sub> to get C<sub>i,j</sub>. Visually, it looks like this:
 
-<img src="images/ABC.png" width="360">
+<img src="img/ABC.png" width="360">
 
 
 Write out the nested Python indexed loops to add two matrices together, C = A + B. Here are some definitions to get you started:
