--- a/docs/3.3_data.md
+++ b/docs/3.3_data.md
@@ -117,7 +117,7 @@ shape is (345, 1)
 ```
 
 
-<img src="images/redbang.png" style="width:30px" align="left">The printed array looks like a list of lists but it is a different data type. Just because two data structures print out in the same way, doesn't mean that they are the same kinds of objects.
+<img src="img/redbang.png" style="width:30px" align="left">The printed array looks like a list of lists but it is a different data type. Just because two data structures print out in the same way, doesn't mean that they are the same kinds of objects.
 
 We can access the 2D NumPy arrays using array index notation *array*`[`*row*, *column*`]`:
 
