--- a/docs/4.3_gradient-descent.md
+++ b/docs/4.3_gradient-descent.md
@@ -91,7 +91,7 @@ There are many approaches to finding function minima iteratively (i.e., non-anal
 
 Gradient descent requires a starting position, $x_0$, the function to optimize, $f(x)$, and its derivative $f'(x)$.  Recall that the derivative is just the slope of a function at a particular point. In other words, as $x$ shifts away from a specific position, does $f(x)$ go up or down, and by how much?  E.g., the derivative of $x^2$ is $2x$, which gives us a positive slope when $x>0$ and a negative slope when $x<0$.  Gradient descent uses the derivative to iteratively pick a new value of $x$ that gets us closer and closer to the minimum of $f(x)$.   The negative of the slope tells us the direction (in $x$ units) of the nearest minimum. For example, here is the cosine graph again, this time showing a number of vectors representing derivatives at particular points.
 
-<img src="images/cos-2minima-edited.png" width="300">
+<img src="img/cos-2minima-edited.png" width="300">
 
 Note that the derivative is zero, i.e. flat, at the minima (same is true for maxima). Notice that the derivatives (red vectors) point in the opposite direction of the nearest minimum. If we want to move in the direction of the nearest minimum, we should adjust $x$ by adding the negative of the derivative; i.e., we should subtract the derivative from $x_i$ to get $x_{i+1}$.  The recurrence relation for updating our estimate of $x$ that minimizes $f(x)$ is then just:
 
@@ -123,7 +123,7 @@ to see if the function is flattening out or when there is a very small vertical 
 
 The steps we take are scaled by the learning rate $\eta$.  Yaser S. Abu-Mostafa has some [great slides](http://www.amlbook.com/slides/iTunesU_Lecture09_May_01.pdf) and videos that you should check out. Here is his description on slide 21 of how the learning rate can affect convergence:
 
-<img src="images/stepsize.png" width="400">
+<img src="img/stepsize.png" width="400">
 
 The domain of $x$ also affects the learning rate magnitude. This is all a very complicated finicky business and those experienced in the field tell me it's very much an art picking the learning rate, starting positions, precision, and so on. You can start out with a low learning rate and crank it up to see if you still converge without oscillating around the minimum.  An excellent description of gradient descent and other minimization techniques can be found in [Numerical Recipes](http://apps.nrbook.com/fortran/index.html).
 
@@ -151,9 +151,9 @@ x _{i+1} = x_i - \eta (f(x_{i}+h) - f(x_{i}))
 
 Our goal is to use gradient descent to minimize $f(x) = cos(3\pi x) / x$. To increase chances of finding the global minimum, we can pick a few random starting locations in the range $[0.1,1.3]$ using standard python {\tt random.uniform()} and perform gradient descent on all of them. To  observe our minimizer in action, we'll eventually plot the trace of $x$'s that indicate the steps taken by our gradient descent. Here are two sample descents where the $x$ and $f(x)$ values are displayed as well as the minima:
 
-<img src="images/cos-trace-2minima.svg" width="350">
+<img src="img/cos-trace-2minima.svg" width="350">
 
-<img src="images/cos-trace-2minima-another.svg" width="350">
+<img src="img/cos-trace-2minima-another.svg" width="350">
 
 Recall from our square root lecture that we had a basic outline for an iterative method:
 
@@ -256,7 +256,7 @@ def viz_trace(x0, minimizer):
              fontsize=14)
     plt.text(0.3, 3.7, f"steps = {len(tracex)}", fontsize=14)
     plt.tight_layout()
-    plt.savefig("images/cos-trace-2minima-another.svg")
+    plt.savefig("img/cos-trace-2minima-another.svg")
     plt.show()
 ```
 
