--- a/docs/5.3_aws.md
+++ b/docs/5.3_aws.md
@@ -9,37 +9,37 @@ Here is a video I made for MSAN692 showing [how to launch an AWS instance and st
 
 Login to AWS and go to your [AWS console](http://aws.amazon.com/console) and click on the "EC2" link.
 
-<img src=images/console_snippet.png width=200>
+<img src=img/console_snippet.png width=200>
 
 Click "Launch Instance", which will start the process to create a virtual machine in the cloud. An instance is just a virtual machine.
 
-<img src=images/launch.png width=400>
+<img src=img/launch.png width=400>
 
 Select the "Amazon Linux 2 AMI" entry, which should be the first one.  This is a commonly-used "image" that results in a Linux machine that contains lots of useful goodies as you can see from that list, such as Python and MySQL. An image is just a snapshot of the disk after someone carefully installs software properly on a Linux machine. This means we don't have to install software every time we create a new machine.
 
-<img src=images/ami.png width=600>
+<img src=img/ami.png width=600>
 
 Select instance type "t2.micro," which should be the first machine type listed. This machine is very low powered but is sufficient for playing around. Click "Review and launch"
 
-<img src=images/selectvm.png width=600>
+<img src=img/selectvm.png width=600>
 
 This will bring up a screen describing the details about the instance we are launching. Ignore all of it for now and just click "Review and Launch" at the bottom right. That brings up a summary page that we could examine if we wanted, but just click "Launch" in bottom right.
 
 This will bring a dialog box up to select a key pair. A key pair is what allows you to securely access the server and prevent unauthorized access. The *first time*, you will need to create a new key pair. Name it as your user ID then click on "Download key pair."  It will download a *userid*.pem file, which are your security credentials for getting into the machine. Save that file in a safe spot. If you lose it you will not be able to get into the machine that you create. From now on, you can reuse that pre-existing key.
 
-<img src=images/keypair.png width=600>
+<img src=img/keypair.png width=600>
 
 After downloading, click "Launch instances." You should see something like:
 
-<img src=images/launched.png width=600>
+<img src=img/launched.png width=600>
 
 Click on the `i-...` link to go to the EC2 console showing your instance.
 
-<img src=images/ec2-instance.png width=600>
+<img src=img/ec2-instance.png width=600>
 
 Click on your instance and you should see a description box at the bottom. Look for the "Public IP" address, which is 54.196.174.210 in this case:
 
-<img src=images/publicIP.png width=600>
+<img src=img/publicIP.png width=600>
 
 We have to wait until the status stops saying "Initializing", which could take several minutes.
 
@@ -47,7 +47,7 @@ We have to wait until the status stops saying "Initializing", which could take s
 
 Click on the "Connect" button at the top of the page and it will bring up a dialog box that tells you how to connect to the server.  You want to connect with "A standalone SSH client" link (Java is now a security risk in the browser so we can't use that choice.)  Inside you will see the `ssh` command necessary to connect to your machine. If you have Windows, there is a link to show you how to use an SSH client called PuTTY. 
 
-<img src=images/connect.png width=550>
+<img src=img/connect.png width=550>
 
  Before we can connect, we have to make sure that the security file is not visible to everyone on the computer (other users). Otherwise ssh will not let us connect because the security file is not secure:
 
@@ -125,15 +125,15 @@ The `$` is your prompt just like you have on your local machine using the termin
 
 You can either hit "command-T" from Terminal.app and get multiple tabs up, one for the remote host and one for local/laptop work:
 
-<img src="images/tabs.png" width="500">
+<img src="img/tabs.png" width="500">
 
 Or just get two windows up using "command-N" from Terminal.app.
 
-<img src="images/two-shells.png" width="500">
+<img src="img/two-shells.png" width="500">
 
 Verify the remote computer is not your laptop by doing command `ls /` on both computers:
 
-<img src="images/two-roots.png" width="500">
+<img src="img/two-roots.png" width="500">
  
 ## Uploading data or code
 
@@ -195,6 +195,6 @@ To exit the remote server, type `exit` or use `^D` from the `$` prompt. The mach
 
 Play around with your instance and then **TERMINATE YOUR INSTANCE WHEN YOU ARE DONE**, otherwise you will continue to get charged for the use of that machine. Right-click on the instance from your AWS console and select "instance state" then submenu "terminate". It will warn you that all of your local storage will go away. Hit the "yes, terminate" button. It should look like this when done:
 
-<img src=images/terminated.png width=450>
+<img src=img/terminated.png width=450>
 
 If you say "stop" instead, it will stop the machine, but you still get charged. On the other hand, this is useful because you can restart that machine without having to go through this whole procedure. All of your data will be intact. If you say "Terminate", it will toss the machine out and you will have to go through this procedure again to get a new machine.
