--- a/docs/2.6_functions.md
+++ b/docs/2.6_functions.md
@@ -1,9 +1,9 @@
 
 # Organizing your code with functions
 
-<img src="images/pestle.png" width="75" align="right">Years ago I learned to make Thai red curry paste from scratch, including roasting then grinding seeds and pounding stuff in a giant mortar and pestle. It takes forever and so I generally buy curry paste ready-made from the store.
+<img src="img/pestle.png" width="75" align="right">Years ago I learned to make Thai red curry paste from scratch, including roasting then grinding seeds and pounding stuff in a giant mortar and pestle. It takes forever and so I generally buy curry paste ready-made from the store.
 
-<img src="images/redcurry.jpeg" width="70" align="right">Similarly, most cookbooks provide a number of fundamental recipes, such as making sauces, that are used by other recipes. A cookbook is organized into a series of executable recipes, some of which "invoke" other recipes. To make dinner, I open a cookbook, acquire some raw ingredients, then execute one or more recipes, usually in a specific sequence.
+<img src="img/redcurry.jpeg" width="70" align="right">Similarly, most cookbooks provide a number of fundamental recipes, such as making sauces, that are used by other recipes. A cookbook is organized into a series of executable recipes, some of which "invoke" other recipes. To make dinner, I open a cookbook, acquire some raw ingredients, then execute one or more recipes, usually in a specific sequence.
 
 Writing a program proceeds in the same way. Opening a cookbook is the same as importing libraries. Acquiring raw ingredients could mean loading data into the memory. The main program  invokes functions (recipes) to accomplish a particular task. As part of writing a program, we will typically break out logical sections of code into functions specific to our problem, whereas the functions in libraries tend to be broadly-applicable. 
 
@@ -57,7 +57,7 @@ def funcname():
 
 with holes for the function name, statements associated with a function, and an expression describing the return value. Functions that have no return value skip the `return` statement.
 
-<img src="images/redbang.png" width="30" align="left"> The way that we associate statements with a function in Python is by indentation.  So `return 3.14159` is part of the function because it is indented after the function header. The first statement that begins in the same column as the `def` is first statement outside of the function.
+<img src="img/redbang.png" width="30" align="left"> The way that we associate statements with a function in Python is by indentation.  So `return 3.14159` is part of the function because it is indented after the function header. The first statement that begins in the same column as the `def` is first statement outside of the function.
 
 
 ```python
@@ -69,7 +69,7 @@ print("this is not part of function")
 ```
 
 
-<img src="images/redbang.png" width="30" align="left">*The Python interpreter does not execute the code inside the function unless we directly invoke that function.*  Python sees the function definition as just that: a "recipe" definition that we can call if we want.
+<img src="img/redbang.png" width="30" align="left">*The Python interpreter does not execute the code inside the function unless we directly invoke that function.*  Python sees the function definition as just that: a "recipe" definition that we can call if we want.
 
 The *definition* of a function is different than invoking  or *calling* a function. Calling a function requires the function name and any argument values. In this case, we don't have any arguments so we call the function as just `pi()`:
 
@@ -201,7 +201,7 @@ This operation is accumulator and there is an associated code template, which yo
 
 Summing values is very common so let's encapsulate the functionality in a function to avoid  having to cut-and-paste the code template all the time. Our black box with a few sample "input-output" pairs from a function plan looks like:
 
-<img src="images/sum-func.png" width="180">
+<img src="img/sum-func.png" width="180">
 
 (Laying out the examples like that made us realize that we need to worry about empty lists.)
 
@@ -713,7 +713,7 @@ One of the big confusion points for students is the difference between return va
 
 Programs in the analytics world typically read data from a file and emit output or write data to another file. In other words, programs interact with the world outside of the program.  The world outside of the program is usually the network, the disk, or the screen.  In contrast, most functions that we write won't interact with the outside world.  
 
-<img src="images/redbang.png" width="30" align="left">Functions compute and return (give values back) to their caller. They don't print anything to the user unless explicitly asked to do so with a `print` statement.  
+<img src="img/redbang.png" width="30" align="left">Functions compute and return (give values back) to their caller. They don't print anything to the user unless explicitly asked to do so with a `print` statement.  
 
 
 ```python
