--- a/docs/6.1_linked-list.md
+++ b/docs/6.1_linked-list.md
@@ -22,21 +22,21 @@ The simplest list has one element with a `next` pointer/reference that points at
 ```python
 users = ("parrt", None)
 ```
-<img src="images/links1.png" style="width:200px">
+<img src="img/links1.png" style="width:200px">
 
 Here's one with two elements:
 
 ```python
 users = ("parrt", ("tombu", None))
 ```
-<img src="images/links2.png" style="width:290px">
+<img src="img/links2.png" style="width:290px">
 
 and three elements:
 
 ```python
 users = ("parrt", ("tombu", ("afedosov", None)))
 ```
-<img src="images/links3.png" style="width:400px">
+<img src="img/links3.png" style="width:400px">
 
 In practice, we'll use lists not tuples, because tuples are immutable. We want to be able to change the node `next` pointers:
 
